Image now appears behind placeholder until load - Fixed bug with placeholder border-radius and background - Fixed bug with placeholder scrolling

--- a/src/page/components/image-placeholder.module.css
+++ b/src/page/components/image-placeholder.module.css
@@ -1,6 +1,6 @@
 .parent-div {
-	background-color: var(--background-color);
-
+	border-radius: 1em;
+	
 	overflow: hidden;
 }
 .scroll-div {
@@ -8,15 +8,17 @@
 	align-items: safe center;
 	justify-content: safe center;
 
-	border-radius: 1em;
+	border-radius: inherit;
 	border: dashed 1px var(--color-1);
+	background-color: var(--background-color);
 
 	box-sizing: border-box;
 	padding: 0.5em;
 	width: 100%;
 	height: 100%;
 
-	overflow: scroll;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .image-alt {
